// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metaverse coge-extension: coge-js new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/coge-js/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: add-unless-exists new -A message=foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "generated",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "skipped",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: cli-prefill-prompt-vars falsy-values-are-ok foobar -A include_something=false 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/cli-prefill-prompt-vars/falsy.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: cli-prefill-prompt-vars name-is-special foobar 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/cli-prefill-prompt-vars/name-is-special.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: cli-prefill-prompt-vars new -A message-from-cli=hello-from-cli 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/cli-prefill-prompt-vars/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: conditional-rendering new -A notGiven 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/conditional/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: existing-params new -A email=premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: existing-params new-params-alias -A email=premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: index-js-existing-params new -A email=premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/index-js-existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: index-js-existing-params new-params-alias -A email=premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/index-js-existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: inflection new --name person 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/my_app/people.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: init self 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/_templates/sample/new/hello.ejs.t",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: mailer new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/app/mailers/message.js",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "generated",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "generated",
      "subject": "given/app/mailers/foo/subject.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "generated",
      "subject": "given/app/mailers/foo/text.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "inject",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "inject",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: overwrite-no base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/overwrite-no/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: overwrite-no over 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "skipped",
      "subject": "given/overwrite-no/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: overwrite-yes base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: overwrite-yes over 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: positional-name new acmecorp 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/positional-name/acmecorp/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: recursive-prompt new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/recursive-prompt/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: shell new --name foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/coge-templates/given/shell/hello.piped",
      "timing": -1,
      "type": "shell",
    },
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/coge-templates/given/shell/foo.hello",
      "timing": -1,
      "type": "shell",
    },
    Object {
      "status": "generated",
      "subject": "given/shell/hmm.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/coge-templates/given/shell/side-effect.hello",
      "timing": -1,
      "type": "shell",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse coge-templates: worker new --name foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "generated",
      "subject": "given/app/workers/foo.js",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;
